# criador-genetico-hs

./: LICENSE  README.md  criador-genetico.cabal  fenotipo_modelo  genetico_modelo  logic_e_modelo  stack.yaml
app/: Main.hs
src/: Lib.hs
